# Transfer_Genius

./: .gitignore  AUDIT_REPORT.md  CONTRIBUTING.md  DATA_DICTIONARY.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
EDA/: eda_laliga.ipynb  eda_porteros.ipynb
configs/: settings.yaml
data/final/: fbref_tm_laliga_longitudinal.csv  jugadores_porteros.csv
data/interim/: fbref_laliga_2017.csv  fbref_laliga_2018.csv  fbref_laliga_2019.csv  fbref_laliga_2020.csv  fbref_laliga_2021.csv  fbref_laliga_2022.csv  fbref_laliga_2023.csv  fbref_laliga_2024.csv  jugadores_laliga_2017.csv  jugadores_laliga_2018.csv  jugadores_laliga_2019.csv  jugadores_laliga_2020.csv  jugadores_laliga_2021.csv  jugadores_laliga_2022.csv  jugadores_laliga_2023.csv  jugadores_laliga_2024.csv  jugadores_laliga_2025.csv
data/processed/: fbref_laliga_2017_clean.csv  fbref_laliga_2018_clean.csv  fbref_laliga_2019_clean.csv  fbref_laliga_2020_clean.csv  fbref_laliga_2021_clean.csv  fbref_laliga_2022_clean.csv  fbref_laliga_2023_clean.csv  fbref_laliga_2024_clean.csv
notebooks/: 01_eda_core.ipynb  exploration_statistics.ipynb
src/: limpieza_fbref_laliga_20XX.py  merge_final.py  merge_transfer_fbref.py  pruebas_scraping_fbref.ipynb  scraper_fbref.py  scraper_transfermarkt.py
tests/: test_clean_fbref.py  test_contracts.py  test_imports.py  test_normalise_text.py  test_scraper_smoke.py
transfer_genius/etl/: fetch.py  scraper_fbref.py  scraper_marketvalues.py  scraper_transfermarkt.py
transfer_genius/utils/: config.py
(+219 files in other folders)
