[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # bugbear
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_configs = true
strict = false

[project]
name = "transfer_genius"
version = "0.1.0"
description = "A pipeline to scrape and merge football data from FBref and Transfermarkt"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
